Extract entry and score actions from resources
The /summarize-score and /submit-entry action endpoints have been
extracted from the resources associated (/scores and /entry
accordinly) with, since both actions create or query more than
one resource at the same time.
